[tool.poetry]
name = "vq-gan"
version = "0.1.0"
description = "An implementation of VQ-GAN in PyTorch."
authors = ["Oelin"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
